[package]
name = "localbang"
version = "0.3.1"
edition = "2018"
authors = ["Jakob Kruse <contact@jakob-kruse.de>"]
license = "MIT"
description = "Cross-platform, cross-browser, cross-search-engine duckduckgo-like bangs"
homepage = "https://github.com/jakob-kruse/localbang"
repository = "https://github.com/jakob-kruse/localbang"
keywords = ["search", "bangs"]

[dependencies]
rocket = { version = "0.5.0-rc.1", features = [] }
urlencoding = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
home = "0.5.3"

