[package]
name = "localbang"
version = "0.4.0"
edition = "2018"
authors = ["Jakob Kruse <contact@jakob-kruse.de>"]
license = "MIT"
description = "Cross-platform, cross-browser, cross-search-engine duckduckgo-like bangs"
homepage = "https://github.com/jakob-kruse/localbang"
repository = "https://github.com/jakob-kruse/localbang"
keywords = ["search", "bangs"]

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
urlencoding = "2.1.0"
url = "2.2.2"
home = "0.5.3"
